update theme description

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: Lauren Yockey Blank Theme
+Theme Name: Lauren Yockey Fall 2016 Final Blog Site
 Theme URI:
 Author: Lauren Yockey
-Description: Blank theme for WIE course
+Description: Final blog site theme for WIE course
 Version: 0.1
 License: Open
-Text Domain: lauren_yockey_blank_template
+Text Domain: lauren_yockey_final_template
 */
 
 @import url("stylesheets/normalize.css");
