--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ h1 a {
 }
 
 
-/* -------- BLOG PAGE ------ */
+/* -------- SINGLE BLOG PAGE ------ */
 .blog {
     margin: 2rem;
 }
@@ -456,6 +456,48 @@ h1 a {
 
 .body_text {
     margin-bottom: 10rem;
+}
+
+
+/* -------- BLOG POSTS ----- */
+.main-blog-content {
+    background: #ffffff;
+}
+
+.main-blog-content h2 {
+    font-color: #e55237;
+    letter-spacing: 0.3rem;
+}
+
+.blog-post-headings,
+.blog-post-headings a,
+.posts-page-date {
+    color: #34495e;
+    text-align: center;
+}
+
+.p-content {
+    margin: 2rem 8rem;
+}
+
+.posts-page-read-more {
+    border: 1px solid #71cecf;
+    display: block;
+    width: 10%;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    margin: 2rem auto 4rem;
+}
+
+.posts-page-read-more:hover {
+    background-color: #71cecf;
+    color: #ffffff;
+}
+
+
+/* -------- 404 ------------ */
+.404-search-button input[type="submit"]{
+    color: #71cecf;
 }
 
 
